[package]
name = "svelte-opt"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

[lib]
path = "opt.rs"

[dependencies]
structopt = { version = "0.2", optional = true }
svelte-traits = { version = "0.1.0", path = "../traits" }
wasm-bindgen = { version = "0.1.0", optional = true }
cfg-if = "0.1.2"

[features]
default = ["cli"]
cli = ["structopt"]
wasm = ["wasm-bindgen"]
