[package]
name = "svelte-wasm-api"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

[lib]
crate-type = ["cdylib"]
path = "./wasm-api.rs"

[dependencies.svelte-ir]
version = "0.1.0"
path = "../ir"

[dependencies.svelte-analyze]
version = "0.1.0"
path = "../analyze"

[dependencies.svelte-opt]
default-features = false
features = ["wasm"]
version = "0.1.0"
path = "../opt"

[dependencies.svelte-parser]
version = "0.1.0"
path = "../parser"

[dependencies.svelte-traits]
version = "0.1.0"
path = "../traits"

[dependencies.wasm-bindgen]
version = "0.1.0"
